# ontoLogic

./: .gitignore  AGENTS.md  README.md  ablate_factor_groups.py  ablate_induced_factors.py  analyze_ontology_report.py  arc_ontology_analysis_50.json  arc_ontology_diag_50.json  arc_ontology_lab.py  arc_ontology_sweep_50.json  evolve_factor_induction.py  ontologic.md  plot_m19_diagnostics.py  pyproject.toml  sweep_ontology_lab.py
Ontologic/App/: OntologicApp.swift  RootTabView.swift
Ontologic/Core/DesignSystem/: Colors.swift  Typography.swift
Ontologic/Core/Models/: HistoryEntry.swift  RecognitionRequest.swift  RecognitionResponse.swift  SymbolCandidate.swift  SymbolDetail.swift
Ontologic/Core/Networking/: APIClient.swift
Ontologic/Features/Draw/: CanvasView.swift  (+2 more)
docs/: 01_MILESTONE_LOG.md  99_AGENT_GUARDRAILS.md  IMPLEMENTATION_PROMPT.md  M16_ARC_ONTOLOGY_MICROSCOPE.md  M17_HIERARCHICAL_FACTORS.md  M18_FACTOR_GROUP_ABLATION.md  M19_EVOLVED_FACTOR_INDUCTION.md  M19_SELF_INDUCED_FACTOR_SPACE.md  ONTOLOGIC_B_LANE.md
src/ontologic_core/: __init__.py  adaptive_order_gate.py  arc_factors.py  arc_hierarchy.py  diagnostics.py  factor_induction.py  report_analysis.py  sweep_analysis.py
tests/: test_adaptive_order_gate.py  test_arc_factors.py  test_arc_factors_hierarchical.py  test_arc_hierarchy.py  test_arc_ontology_lab.py  test_b_lane_boundaries.py  test_evolve_factor_induction.py  test_factor_group_ablation.py  test_factor_induction.py  test_lab_factor_mode.py  test_m18_boundaries.py  test_plot_m19_diagnostics.py  test_report_analysis.py  test_sweep_analysis.py
(+20 files in other folders)
