[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontologic"
version = "0.1.0"
description = "Clean Ontologic B-lane: adaptive-order gate diagnostics, not an ARC solver."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
plot = [
  "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ontologic_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
